--- a/login.css
+++ b/login.css
@@ -1,23 +1,52 @@
-body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-#logo {
-    width: 85px;
-    position: absolute;
-    left: 40px;
-    top: 30px;
-    z-index: 1;
-}
+    body{
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+    #logo {
+        width: 85px;
+        position: absolute;
+        left: 40px;
+        top: 30px;
+        z-index: 1;
+    }
 
-#mainform {
-    position: absolute;
-    left: 25%;
-    width: 270px;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    flex-wrap: wrap;
-}
-#mainform>p{
-    font-size: .75rem;
-}
+    #mainform {
+        position: absolute;
+        left: 240px;
+        top: 250px;
+        width: 300px;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        flex-wrap: wrap;
+    }
+    #mainform>p{
+        font-size: .75rem;
+    }
+    .btn>img{
+        width: 30px;
+    }
+    #mainform .btn {
+        border: 1px solid rgba(0, 0, 0, 0.157);
+        background-color: white;
+        width: 350px;
+    }
+    #mainform #apple {
+        background-color: black;
+        height: 50px;
+    }
+    #mainform #apple img {
+        width: 20px;
+    }
+    #mainform h4{
+        color: rgb(182, 0, 0);
+    }
+    .horizontal-line {
+        width: 100%;
+        border-top: 1px solid #000; /* Adjust color and thickness as needed */
+        margin: 20px 0; /* Adjust margin as needed */
+    }
+    @media (max-width: 800px) {
+        #mainform{
+            width: 250px;
+        }
+    }
