--- a/index.css
+++ b/index.css
@@ -282,7 +282,7 @@ body {
     display: flex;
     justify-content: center;
     background-color: white;
-
+    padding-top: 15px;
 }
 
 .card:hover {
@@ -316,15 +316,18 @@ body {
     max-width: 1200px;
     margin: 0 auto;
 }
+footer>.protected{
+    display: flex;
+}
 
 .footer-section {
     flex-basis: 20%;
 }
 
 .section-heading {
-    font-size: 18px;
-    text-transform: uppercase;
+    font-size: 17px;
     margin-bottom: 20px;
+    font-weight: bold;
 }
 
 .footer-section ul {
@@ -337,7 +340,7 @@ body {
 }
 
 .footer-section a {
-    color: #333;
+    color: black;
     text-decoration: none;
 }
 
