--- a/login.css
+++ b/login.css
@@ -1,6 +1,7 @@
-    body{
+    body {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
+
     #logo {
         width: 85px;
         position: absolute;
@@ -11,42 +12,96 @@
 
     #mainform {
         position: absolute;
-        left: 240px;
-        top: 250px;
-        width: 300px;
+        left: 24%;
+        top: 230px;
+        width: 330px;
         display: flex;
         justify-content: center;
         text-align: center;
         flex-wrap: wrap;
     }
-    #mainform>p{
+
+    #mainform>p {
         font-size: .75rem;
     }
-    .btn>img{
+
+    .btn>img {
         width: 30px;
     }
+
     #mainform .btn {
+        transition: .5s;
         border: 1px solid rgba(0, 0, 0, 0.157);
         background-color: white;
         width: 350px;
     }
+
     #mainform #apple {
         background-color: black;
         height: 50px;
     }
+
     #mainform #apple img {
         width: 20px;
     }
-    #mainform h4{
+
+    #mainform #or {
+        width: 50px;
+        margin-top: -30px;
+        background-color: white;
+        color: rgba(0, 0, 0, 0.7);
+    }
+
+    #mainform h4 {
         color: rgb(182, 0, 0);
     }
+
     .horizontal-line {
         width: 100%;
-        border-top: 1px solid #000; /* Adjust color and thickness as needed */
-        margin: 20px 0; /* Adjust margin as needed */
+        border-top: 1px solid rgba(0, 0, 0, 0.7);
+        margin: 20px 0;
+        z-index: -1;
     }
-    @media (max-width: 800px) {
-        #mainform{
+
+    #google:hover {
+        transition: .5s;
+        background-color: rgba(219, 219, 252, 0.2);
+    }
+
+    #mainform #apple:hover {
+        transition: .5s;
+        background-color: rgba(0, 0, 0, 0.85);
+    }
+
+    #passfield {
+        margin-top: 10px;
+    }
+    #mainform #loginbtn{
+        background-color:rgb(211, 0, 0);
+    }
+
+    .ending{
+        font-size: 13px;
+        margin-top: 10px;
+        margin-left: auto;
+    }
+
+    @media (max-width: 1070px) {
+        #mainform {
             width: 250px;
+        }
+    }
+
+    @media (max-width: 480px) {
+        #logo {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        #mainform {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
         }
     }
