--- a/signup.css
+++ b/signup.css
@@ -10,20 +10,22 @@ body {
     z-index: 1;
 }
 
-#dworry{
+#dworry {
     margin-top: 20px;
 }
 
 #mainform {
     position: absolute;
     left: 24%;
-    top: 230px;
+    top: 160px;
     width: 330px;
     display: flex;
     justify-content: center;
     text-align: center;
     flex-wrap: wrap;
     padding-bottom: 100px;
+    margin-bottom: 30px;
+
 }
 
 #mainform>p {
@@ -78,6 +80,10 @@ body {
     background-color: rgba(0, 0, 0, 0.85);
 }
 
+#mainform input {
+    margin-bottom: 10px;
+}
+
 #passfield {
     margin-top: 10px;
 }
@@ -93,21 +99,33 @@ body {
 }
 
 #loginh {
-    position: fixed;
+    position: absolute;
     right: 280px;
     top: 280px;
     width: 430px;
 }
 
-.index-footer {
+.names {
+    display: flex;
+    margin-bottom: 10px;
+}
 
+.names #spaces {
+    margin-right: 10px;
+}
+
+.names select {
+    margin-right: 12px;
+}
+
+.index-footer {
     background-color: rgb(242, 242, 242);
     padding: 40px;
     text-align: start;
     font-size: 12px;
     color: rgb(0, 0, 0);
     position: relative;
-    margin-top: 500px;
+    margin-top: 600px;
 }
 
 .footer-container {
@@ -152,7 +170,32 @@ footer>.protected {
 
 @media (max-width: 1070px) {
     #mainform {
+        transition: .5s;
         width: 250px;
+    }
+}
+
+@media (max-width: 1284px){
+    #loginh{
+        transition: .5s;
+        width: 300px;
+        right: 70px;
+    }
+}
+@media (max-width: 860px){
+    #mainform{
+        top: 500px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 280px;
+    }
+    #loginh{
+        top: 200px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    footer{
+        top: 500px;
     }
 }
 
