--- a/allpages/about.css
+++ b/allpages/about.css
@@ -16,6 +16,10 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+#wholehead{
+    background-color: white;
+}
+
 #logo {
     width: 85px;
     position: absolute;
@@ -31,8 +35,8 @@ body {
     z-index: -1;
     width: 100%;
     min-height: 100%;
-    object-fit: cover;
-    position: fixed;
+    object-fit: cover;  
+    padding-top: 150px;
 }
 
 #headcontain {
@@ -57,6 +61,7 @@ body {
     height: 48px;
     background-color: red;
     border-radius: 3px;
+    box-shadow: 0px 0px 15px 0px rgba(102, 102, 102, 0.536); 
 }
 
 #search input[type="text"] {
@@ -114,7 +119,7 @@ body {
 #ddb,
 #ddm {
     transition: .2s;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 #ddm>li {
@@ -155,7 +160,7 @@ body {
     width: 150px;
     background-color: transparent;
     border: none;
-    color: white;
+    color: rgb(0, 0, 0);
     border-radius: 5px;
 }
 
@@ -178,8 +183,8 @@ body {
     height: 45px;
     width: 75px;
     background-color: transparent;
-    border: 2px solid white;
-    color: white;
+    border: 2px solid rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
     border-radius: 5px;
 }
 
@@ -206,41 +211,14 @@ body {
     background-color: rgb(255, 73, 73);
 }
 
-#heroopt1 {
-    position: absolute;
-    left: 165px;
-    transition: 1s;
-    top: var(--topm);
-}
-
-#heroopt2 {
-    position: absolute;
-    left: 165px;
-    transition: 1s;
-    top: calc(var(--topm) + 80px);
-}
-
-#heroopt3 {
-    position: absolute;
-    left: 165px;
-    transition: 1s;
-    top: calc(var(--topm) + 160px);
-}
-
-#heroopt4 {
-    position: absolute;
-    left: 165px;
-    transition: 1s;
-    top: calc(var(--topm) + 240px);
-}
-
 #herohd {
     position: absolute;
-    font-size: 50px;
+    font-size: 70px;
     color: white;
-    top: 200px;
-    left: 200px;
-}
+    top: 500px;
+    left: 20%;
+    text-align: center;
+    }
 
 #herodiv>div {
     display: block;
@@ -248,27 +226,9 @@ body {
     top: 0%;
     z-index: 0;
     width: 100%;
-    min-height: 100%;
+    min-height: 20%;
     object-fit: cover;
-    background-color: rgba(0, 0, 0, 0.25);
-}
-
-#soupbtn {
-    font-size: 18px;
-    position: absolute;
-    transition: .5s;
-    top: 370px;
-    left: 200px;
-    height: 45px;
-    width: 120px;
-    background-color: red;
-    border: none;
-    color: white;
-    border-radius: 5px;
-}
-
-#soupbtn>img {
-    width: 25px;
+    background-color: rgb(255, 255, 255);
 }
 
 #mt {
@@ -302,14 +262,6 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
     background-color: white;
-}
-
-#category{
-    display: flex;
-    justify-content: center;
-    background-color: white;
-    padding-top: 50px;
-    padding-bottom: 20px;
 }
 
 #minicard {
@@ -408,7 +360,6 @@ footer>.protected {
         width: calc(50% - 20px);
     }
 }
-
 
 @media (max-width: 400px) {
     .card {
