--- a/allpages/review.css
+++ b/allpages/review.css
@@ -54,7 +54,7 @@
     transition: 1s;
     top: 280px;
     left: 165px;
-    width: calc(48%);
+    width: 700px;
     height: 48px;
     background-color: red;
     border-radius: 3px;
@@ -81,36 +81,50 @@
     padding-bottom: 6px;
 }
 
-.card:hover{
+.card {
+    max-width: 540px;
+}
+
+.card:hover {
     transition: .3s;
     box-shadow: 0px 0px 15px 0px rgb(0, 0, 0, .3);
 }
-.card:not(:hover){
+
+.card:not(:hover) {
     transition: .3s;
 }
-#star>img{
+
+#star>img {
     width: 40px;
     padding-left: 10px;
 }
-#allcards{
+
+#allcards {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     background-color: white;
-    
+
     top: 70%;
 }
-#hero{
+
+#hero {
     position: absolute;
     top: 20%;
     left: 60%;
 }
+
 .index-footer {
+
     background-color: rgb(242, 242, 242);
     padding: 40px;
     text-align: start;
+    font-size: 12px;
     color: rgb(0, 0, 0);
+    position: relative;
+    margin-top: 150px;
 }
+
 .footer-container {
     display: flex;
     justify-content: space-around;
@@ -118,14 +132,18 @@
     margin: 0 auto;
 }
 
+footer>.protected {
+    display: flex;
+}
+
 .footer-section {
     flex-basis: 20%;
 }
 
 .section-heading {
-    font-size: 18px;
-    text-transform: uppercase;
+    font-size: 17px;
     margin-bottom: 20px;
+    font-weight: bold;
 }
 
 .footer-section ul {
@@ -138,6 +156,68 @@
 }
 
 .footer-section a {
-    color: #333;
+    color: black;
     text-decoration: none;
+}
+
+#copyright {
+    display: flex;
+    justify-content: center;
+}
+
+@media (max-width: 1070px) {
+    #mainform {
+        transition: .5s;
+        width: 250px;
+    }
+}
+
+@media (max-width: 900px) {
+    #search {
+        width: 400px;
+    }
+
+    #rh {
+        position: absolute;
+        width: max-content;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    #rt {
+        position: absolute;
+        padding: 0;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    #search {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
+
+@media (max-width: 1284px) {
+    #hero {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .card {
+        width: 255px;
+    }
+}
+
+@media (max-width: 860px) {
+    #loginh {
+        top: 200px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    footer {
+        top: 100px;
+    }
 }
