--- a/index.css
+++ b/index.css
@@ -85,6 +85,7 @@ body {
     top: 35px;
     left: 62%;
     height: 100px;
+    z-index: 5;
 }
 
 #dd2 {
@@ -157,6 +158,7 @@ body {
     border: none;
     color: white;
     border-radius: 5px;
+    z-index: 5;
 }
 
 #reviewbtn:hover {
@@ -533,5 +535,11 @@ footer>.protected {
 
     #headcontain {
         min-height: 100%;
+    }
+}
+@media (max-width: 620px){
+    #allhero{
+        display: flex;
+        justify-content: center;
     }
 }
