--- a/index.css
+++ b/index.css
@@ -57,6 +57,7 @@ body {
     height: 48px;
     background-color: red;
     border-radius: 3px;
+    z-index: 5;
 }
 
 #search input[type="text"] {
@@ -183,6 +184,7 @@ body {
     border: 2px solid white;
     color: white;
     border-radius: 5px;
+    z-index: 5;
 }
 
 #loginbtn:hover {
@@ -202,6 +204,7 @@ body {
     border: none;
     color: white;
     border-radius: 5px;
+    z-index: 5;
 }
 
 #signupbtn:hover {
@@ -306,7 +309,7 @@ body {
     background-color: white;
 }
 
-#category{
+#category {
     display: flex;
     justify-content: center;
     background-color: white;
@@ -397,18 +400,6 @@ footer>.protected {
 #copyright {
     display: flex;
     justify-content: center;
-}
-
-@media (max-width: 628px) {
-    #herodiv {
-        width: calc(600px);
-    }
-}
-
-@media (max-width: 600px) {
-    .card {
-        width: calc(50% - 20px);
-    }
 }
 
 
@@ -537,9 +528,58 @@ footer>.protected {
         min-height: 100%;
     }
 }
-@media (max-width: 620px){
-    #allhero{
+
+@media (max-width: 620px) {
+    #allhero {
         display: flex;
         justify-content: center;
     }
+}
+
+@media (max-width: 630px) {
+    .card {
+        width: calc(50% - 20px);
+    }
+    
+    #herodiv {
+        width: calc(600px);
+    }
+
+    #logo {
+        position: absolute;
+        top: 20px;
+        left: 50%;
+        transform: translateX(-50%)
+    }
+
+    #search {
+        position: absolute;
+        top: 80px;
+        width: 300px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    #loginbtn {
+        position: absolute;
+        top: 150px;
+        left: 23%;
+    }
+
+    #signupbtn {
+        position: absolute;
+        top: 150px;
+        left: 77%;
+    }
+    #dd2{
+        position: absolute;
+        left: 10%;
+        top: 210px;
+    }
+    #dd{
+        position: absolute;
+        left: 77%;
+        top: 210px;
+    }
+
 }
